# exn

./: CHANGELOG.md  Cargo.toml  README.md  licenserc.toml  rust-toolchain.toml  rustfmt.toml  taplo.toml  typos.toml
.cargo/: config.toml
.github/: semantic.yml
.github/workflows/: ci.yml
examples/: Cargo.toml
examples/src/: anti-pattern.rs  antipattern.rs  anyhow.rs  basic.rs  custom-layout.rs  downcast.rs  from-anyhow.rs  into-anyhow.rs  into-error.rs  into-std-error.rs  library-boundary.rs  make-error.rs  recovery.rs
exn/: Cargo.toml
exn-anyhow/: Cargo.toml  README.md
exn-anyhow/src/: lib.rs
exn/examples/: anti_pattern.rs  basic.rs  custom_layout.rs  downcast.rs
exn/src/: convert.rs  debug.rs  display.rs  exn.rs  ext.rs  impls.rs  iterator.rs  lib.rs  macros.rs  option.rs  report.rs  result.rs  tests.rs  visitor.rs
exn/src/impls/: context_value.rs  debug.rs  debug_impl.rs  erased.rs  error_value.rs  mod.rs  view.rs  visit.rs
exn/src/model/: context_value.rs  error_value.rs  mod.rs  visit.rs  visit_mut.rs
exn/src/report/: compact.rs  native.rs
exn/tests/: common.rs  main.rs  report_compact.rs  simple.rs
exn/tests/snapshots/: main__bail.snap  main__ensure_fail.snap  main__from_error.snap  main__linear_error.snap  main__new_with_source.snap  main__option_ext.snap  main__result_ext.snap  main__tree_error.snap  report_compact__report_compact_straightforward.snap  report_compact__report_compact_tree.snap  simple__bail.snap  simple__ensure_fail.snap  simple__error_straightforward.snap  simple__error_tree.snap  simple__from_error.snap  simple__iterator_ext_err.snap  simple__option_ext.snap  simple__result_ext.snap
xtask/: Cargo.toml
xtask/src/: main.rs
